--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
   
   <!-- TODO Add script tags for your JavaScript files here -->
   <script src="scripts/controller.js"></script>
+  <script src="scripts/service.js"></script>
   <script src="scripts/route-config.js"></script>
 </body>
 
